Fix indicator text vertical alignment

--- a/src/indicator.css
+++ b/src/indicator.css
@@ -77,6 +77,7 @@ body {
 .rec-text {
   font-size: 11px;
   letter-spacing: 0.5px;
+  line-height: 1;
 }
 
 .processing {
